# simple-rag-template

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  dedupe.py  pyproject.toml  rag_cli.py  rag_config.py  rag_logging.py  rag_pipeline.py  requirements-lock.txt  requirements.txt
data/: README.md  sample_notes.md
prompts/: answer.txt
tests/: test_dedupe.py  test_rag_config.py
